--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.toml": "bat",
         "ao3": "c",
-        "vector": "cpp"
+        "vector": "cpp",
+        "iostream": "cpp",
+        "string": "cpp"
     }
 }
