--- a/ABC/.vscode/settings.json
+++ b/ABC/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
+        "*.toml": "bat",
         "ostream": "cpp",
         "string": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "vector": "cpp"
     }
 }
